# ada

./: .gitignore  .gitmodules  README.md  design.dgml  requirements.txt  run.cmd  temp.patch  updatepi.cmd
Ada-Serial-Test/: Ada SerialTest.cpp  Ada SerialTest.sln  Ada SerialTest.vcxproj  Ada_Central_Cone.h  Adafruit_NeoPixel.cpp  Adafruit_NeoPixel.h  LED_Helper.h  Makefile  Serial_Functions.h
AdaKiosk/: AdaKiosk.csproj  AdaKiosk.sln  App.xaml  App.xaml.cs  AssemblyInfo.cs  ColorPickerPanel.xaml  ColorPickerPanel.xaml.cs  ColorTestWindow.xaml  ColorTestWindow.xaml.cs  ColumnMap.cs  Command.cs  Controller.xaml  Controller.xaml.cs  DebugStripPanel.xaml  DebugStripPanel.xaml.cs  DelayedAction.cs  GlowyBall.cs  HlsColor.cs  LedControl.xaml  LedControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MessageBus.cs  PublishBinaries.py  PublishClickOnce.cmd  RaspberryPi.cs  ServerConfig.cs  Simulator.xaml  Simulator.xaml.cs  StripControl.xaml  StripControl.xaml.cs  UiDispatcher.cs  UploadZip.ps1  WpfHelper.cs  ZoneMap.cs  publish.cmd  readme.md
AdaKioskPackage/: AdaKioskPackage.sln  AdaKioskPackage.wapproj  Package.appxmanifest
AdaKioskService/: AdaKioskService.Designer.cs  AdaKioskService.cs  AdaKioskService.csproj  AdaKioskService.sln  AdaKioskUpdateService.csproj  AdaKioskUpdateService.sln  App.config  ApplicationLauncher.cs  AzureUpdater.cs  GitReleaseUpdater.cs  Program.cs  ProjectInstaller.Designer.cs  ProjectInstaller.cs  ServiceLog.cs  UploadZip.ps1  WindowsUpdater.cs  build.cmd  packages.config  readme.md
AdaKioskUWP/: AdaKioskUWP.csproj  AdaKioskUWP.sln  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  readme.md
RpiController/: CMakeLists.txt  build.cmd  build.sh  buildtools.py  main.cpp  readme.md  run.py  run.sh
RpiController/Controller/: Commands.h  Controller.h  Sensei.h  TeensyPixelBuffer.h
RpiController/Ports/: Port.cpp  Port.h  SerialPort.cpp  SerialPort.h  SocketInit.cpp  SocketInit.h  TcpClientPort.cpp  TcpClientPort.h  UdpClientPort.cpp  UdpClientPort.h
RpiController/Ports/linux/: LinuxFindSerialPorts.cpp
RpiController/Ports/windows/: WindowsFindSerialPorts.cpp
RpiController/Utils/: Color.h  FileSystem.h  Settings.h  StreamWriter.h  Timer.h  Utils.h  crc32.cpp  crc32.h
(+216 files in other folders)
